Preventing images in the tooltip from becoming too large

--- a/src/Containers/TimelineContainer/TimelineContainer.css
+++ b/src/Containers/TimelineContainer/TimelineContainer.css
@@ -37,7 +37,7 @@
 
 .tooltip img {
 	max-width: 100%;
-	max-height: 100%;
+	max-height: 300px;
 }
 
 .zoom_controller {
